--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <main>
         <h1>Paralign Issues and shtuff</h1>  
     </main>
+	  <b1>this is where you can find all things paralign<b1>
 	<script src="index.js"></script>
   </body>
 </html>
