--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <main>
         <h1>Paralign Issues and shtuff</h1>  
     </main>
-	  <b1>this is where you can find all things paralign<b1>
+	  <p>this is where you can find all things paralign</p>
+	  <p>how does the paralign work you ask well boy am i glad you asked
+	  so i shall see if this works i guess</p>
 	<script src="index.js"></script>
   </body>
 </html>
