--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </main>
 	  <p>this is where you can find all things paralign</p>
 	  <p>how does the paralign work you ask well boy am i glad you asked</p>
-	  <p></p>so i shall see if this works i guess</p>
+	  <p>so i shall see if this works i guess</p>
 	<script src="index.js"></script>
   </body>
 </html>
