--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <main>
         <h1>Paralign Issues and shtuff</h1>  
     </main>
-	  <p>this is where you can find all things paralign</p>
-	  <p>how does the paralign work you ask well boy am i glad you asked</p>
-	  <p>so i shall see if this works i guess</p>
+	  <pre>
+Line one
+Line two
+Line three
+</pre>
 	<script src="index.js"></script>
   </body>
 </html>
