--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
         <h1>Paralign Issues and shtuff</h1>  
     </main>
 	  <pre>
-Line one
-Line two
-Line three
+This website is for the PRUFTECHNIK service team to keep track of any paralign issues, have methods to solve such issues, train users to use the paralign, and last but not least have a map of good places to eat while traveling
 </pre>
 	<script src="index.js"></script>
   </body>
