--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
         <h1>Paralign Issues and shtuff</h1>  
     </main>
 	  <pre>
-This website is for the PRUFTECHNIK service team to keep track of any paralign issues, have methods to solve such issues, train users to use the paralign, and last but not least have a map of good places to eat while traveling
+		Hallo PRUFTECHNIK Service team North America Division. This website serves 4 distinct purposes. 
+		  1. Keeping track of any paralign issues
+		  2. Containing methods to solve such issues
+		  3. Train users to use the paralign
+		  4. Map out good places to eat while traveling
 </pre>
 	<script src="index.js"></script>
   </body>
