--- a/index.html
+++ b/index.html
@@ -12,12 +12,23 @@
     <main>
         <h1>Paralign Issues and shtuff</h1>  
     </main>
-	  <pre>
-		Hallo PRUFTECHNIK Service team North America Division. This website serves 4 distinct purposes. 
-		  1. Train users to use the paralign
-		  2. Keeping track of any paralign issues
-		  3. Containing methods to solve such issues
-		  4. Map out good places to eat while traveling
+<pre>
+Hallo PRUFTECHNIK Service team North America Division. This website serves 4 distinct purposes. 
+  1. Train users to use the paralign
+  2. Keeping track of any paralign issues
+  3. Containing methods to solve such issues
+  4. Map out good places to eat while traveling
+
+
+Inside the paralign...
+The paralign contains 3 ring laser gyroscopes that will be able to measure the roll, pitch, and yaw(x, y, and z axies) of the device.
+To calibrate the device, it will first measure the Earth's rotation to see its speed(it should stay between 15.031 and 15.051 degree/hour)
+Once this is determined the paralign is then taken to a roll on the desired machine. 
+This will measure the axis of rotation of the device.
+Then the calibration plate set ur may begin. 
+The plate will be set up perfectly paralell to the link roll just measured with a desired  < .1 horizontal and vertical.
+Then you will 
+
 </pre>
 	<script src="index.js"></script>
   </body>
