--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ Hallo PRUFTECHNIK Service team North America Division. This website serves 4 dis
   4. Map out good places to eat while traveling
 
 
-Inside the paralign...
+<b>Inside the paralign</b>
 The paralign contains 3 ring laser gyroscopes that will be able to measure the roll, pitch, and yaw(x, y, and z axies) of the device.
 To calibrate the device, it will first measure the Earth's rotation to see its speed(it should stay between 15.031 and 15.051 degree/hour)
 Once this is determined the paralign is then taken to a roll on the desired machine. 
