--- a/form.html
+++ b/form.html
@@ -1,70 +1,45 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sample Form</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        .form-container {
-            max-width: 600px;
-            margin: auto;
-            padding: 20px;
-            background-color: #f4f4f4;
-            border-radius: 8px;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-        }
-        .form-group input, .form-group textarea {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-        }
-        .form-group textarea {
-            resize: vertical;
-        }
-        button[type="submit"] {
-            background-color: #4285F4;
-            color: white;
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-        button[type="submit"]:hover {
-            background-color: #357ae8;
-        }
-    </style>
-</head>
-<body>
+<?php
+// Check if the form is submitted
+if ($_SERVER["REQUEST_METHOD"] == "POST") {
+    // Collect and sanitize input data
+    $name = htmlspecialchars($_POST['name']);
+    $email = htmlspecialchars($_POST['email']);
+    $message = htmlspecialchars($_POST['message']);
 
-<div class="form-container">
-    <h2>Contact Form</h2>
-    <form action="submit.php" method="POST">
-        <div class="form-group">
-            <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
-        </div>
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-            <label for="message">Message:</label>
-            <textarea id="message" name="message" required></textarea>
-        </div>
-        <button type="submit">Submit</button>
-    </form>
-</div>
+    // Validate input data
+    // For simplicity, this example only checks if fields are empty.
+    if (empty($name) || empty($email) || empty($message)) {
+        echo "Please fill in all required fields.";
+    } else {
+        // Process the data (e.g., save to database, send email)
+        // This example just echoes the data back
+        echo "Name: " . $name . "<br>";
+        echo "Email: " . $email . "<br>";
+        echo "Message: " . $message . "<br>";
 
-</body>
-</html>
+        // Specify the path to the CSV file
+        $file = 'submissions.csv'; // Adjust the path as needed
+
+        // Try to open the file for appending
+        $handle = fopen($file, 'a'); // 'a' mode for appending
+
+        if ($handle === false) {
+            echo "Error opening the file";
+        } else {
+            // Create an array with the form data
+            $csvData = array($name, $email, $message);
+
+            // Write the data to the CSV file
+            fputcsv($handle, $csvData);
+
+            // Close the file
+            fclose($handle);
+
+            echo "Data appended to CSV successfully.";
+        }
+    }
+} else {
+    // Not a POST request, redirect to the form or show an error
+    echo "Form not submitted correctly.";
+}
+?>
