--- a/form.html
+++ b/form.html
@@ -49,7 +49,7 @@
 
 <div class="form-container">
     <h2>Contact Form</h2>
-    <form action="https://formspree.io/f/xdoqdgay" method="POST">
+    <form action="https://formspree.io/f/mzbnvrdn" method="POST">
         <div class="form-group">
             <label for="name">Name:</label>
             <input type="text" id="name" name="name" required>
