--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+    <meta http-equiv="refresh" content="delay_time; URL=https://joelabraham64.github.io/pipe-bomb/form" />
+
   </head>
   <body>
     <main>
