--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <meta http-equiv="refresh" content="delay_time; URL=https://joelabraham64.github.io/pipe-bomb/form" />
+    <title>Redirecting...</title>
+    <script>
+        window.onload = function() {
+            // Redirect after 5 seconds
+            setTimeout(function() {
+                window.location.href = "https://joelabraham64.github.io/pipe-bomb/form";
+            }, 5000);
+        };
+    </script>
 
   </head>
   <body>
