--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     </script>
 
   </head>
+<body>
+    <p>If you are not redirected, <a href="https://example.com">click here</a>.</p>
+
   <body>
     <main>
         <h1>Paralign Issues and shtuff</h1>  
