--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   </head>
 <body>
-    <p>If you are not redirected, <a href="https://joelabraham64.github.io/pipe-bomb/form">click here</a>.</p>
+<!--     <p>If you are not redirected, <a href="https://joelabraham64.github.io/pipe-bomb/form">click here</a>.</p> -->
 
   <body>
     <main>
