--- a/index.html
+++ b/index.html
@@ -7,19 +7,10 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    <title>Redirecting...</title>
-    <script>
-        window.onload = function() {
-            // Redirect after 5 seconds
-            setTimeout(function() {
-                window.location.href = "https://joelabraham64.github.io/pipe-bomb/form";
-            }, 5000);
-        };
-    </script>
 
   </head>
 <body>
-<!--     <p>If you are not redirected, <a href="https://joelabraham64.github.io/pipe-bomb/form">click here</a>.</p> -->
+    <p>If you are not redirected, <a href="https://joelabraham64.github.io/pipe-bomb/form">click here</a>.</p>
 
   <body>
     <main>
