--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 
   </head>
 <body>
-    <p>If you are not redirected, <a href="https://joelabraham64.github.io/pipe-bomb/form">click here</a>.</p>
+<button id="nextPageButton">Form</button>
 
-  <body>
+<script>
+    document.getElementById('nextPageButton').addEventListener('click', function() {
+        window.location.href = 'https://joelabraham64.github.io/pipe-bomb/form'; // Change this URL to your desired destination
+    });
+</script>
+
+
     <main>
         <h1>Paralign Issues and shtuff</h1>  
     </main>
