--- a/index.html
+++ b/index.html
@@ -7,17 +7,25 @@
     <title>My Website</title>
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
+       <title>Multiple Redirect Links</title>
+    <style>
+        .button-style {
+            display: inline-block;
+            background-color: #4285F4;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin: 5px; /* Adds space between buttons */
+        }
+    </style>
 
   </head>
 <body>
-<button id="nextPageButton">Form</button>
-
-<script>
-    document.getElementById('nextPageButton').addEventListener('click', function() {
-        window.location.href = 'https://joelabraham64.github.io/pipe-bomb/form'; // Change this URL to your desired destination
-    });
-</script>
-
+<a href="https://example.com/page1.html" class="button-style">Go to Page 1</a>
+<a href="https://example.com/page2.html" class="button-style">Go to Page 2</a>
+<a href="https://example.com/page3.html" class="button-style">Go to Page 3</a>
 
     <main>
         <h1>Paralign Issues and shtuff</h1>  
