--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 
   </head>
 <body>
-<a href="https://example.com/page1.html" class="button-style">Go to Page 1</a>
-<a href="https://example.com/page2.html" class="button-style">Go to Page 2</a>
-<a href="https://example.com/page3.html" class="button-style">Go to Page 3</a>
+<a href="https://joelabraham64.github.io/pipe-bomb/form" class="button-style">Form</a>
+<a href="https://joelabraham64.github.io/pipe-bomb/issues" class="button-style">Issues</a>
+<a href="https://joelabraham64.github.io/pipe-bomb/goodeats" class="button-style">Nomnoms</a>
 
     <main>
         <h1>Paralign Issues and shtuff</h1>  
