--- a/form.html
+++ b/form.html
@@ -51,15 +51,19 @@
     <h2>Contact Form</h2>
     <form action="https://formspree.io/f/mzbnvrdn" method="POST">
         <div class="form-group">
-            <label for="name">Name:</label>
+            <label for="name">Paralign Name:</label>
             <input type="text" id="name" name="name" required>
         </div>
         <div class="form-group">
-            <label for="email">Email:</label>
+            <label for="email">Issue:</label>
             <input type="email" id="email" name="email" required>
         </div>
         <div class="form-group">
-            <label for="message">Message:</label>
+            <label for="message">Additional Notes:</label>
+            <textarea id="message" name="message" required></textarea>
+        </div>
+        <div class="form-group">
+            <label for="message">When Gen:</label>
             <textarea id="message" name="message" required></textarea>
         </div>
         <button type="submit">Submit</button>
