--- a/form.html
+++ b/form.html
@@ -55,15 +55,15 @@
             <input type="text" id="name" name="name" required>
         </div>
         <div class="form-group">
-            <label for="email">Issue:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="message">Issue:</label>
+            <input id="message" name="message" required></textarea>
         </div>
         <div class="form-group">
             <label for="message">Additional Notes:</label>
             <textarea id="message" name="message" required></textarea>
         </div>
         <div class="form-group">
-            <label for="message">When Gen:</label>
+            <label for="message">Which Gen:</label>
             <textarea id="message" name="message" required></textarea>
         </div>
         <button type="submit">Submit</button>
