--- a/form.html
+++ b/form.html
@@ -54,10 +54,18 @@
             <label for="name">Paralign Name:</label>
             <input type="text" id="name" name="name" required>
         </div>
-        <div class="form-group">
-            <label for="message">Issue:</label>
-            <input id="message" name="message" required></textarea>
-        </div>
+<label for="issueSelect">Select an Issue:</label>
+    <select id="issueSelect" name="issue">
+        <option value="billing">Billing Issue</option>
+        <option value="login">Login Problem</option>
+        <option value="technical">Technical Glitch</option>
+        <option value="other">Other</option>
+    </select>
+    
+    <div id="otherIssue">
+        <label for="otherInput">Please describe your issue:</label>
+        <input type="text" id="otherInput" name="otherIssue">
+    </div>
         <div class="form-group">
             <label for="message">Additional Notes:</label>
             <textarea id="message" name="message" required></textarea>
