--- a/form.html
+++ b/form.html
@@ -54,13 +54,10 @@
             <label for="name">Paralign Name:</label>
             <input type="text" id="name" name="name" required>
         </div>
-<label for="issueSelect">Select an Issue:</label>
-    <select id="issueSelect" name="issue">
-        <option value="billing">Billing Issue</option>
-        <option value="login">Login Problem</option>
-        <option value="technical">Technical Glitch</option>
-        <option value="other">Other</option>
-    </select>
+<div class="form-group">
+            <label for="name">Issues:</label>
+            <input type="message" id="message" name="message" required>
+        </div>
     
     <div id="otherIssue">
         <label for="otherInput">Please describe your issue:</label>
