--- a/form.html
+++ b/form.html
@@ -59,13 +59,9 @@
             <input type="message" id="message" name="message" required>
         </div>
     
-    <div id="otherIssue">
-        <label for="otherInput">Please describe your issue:</label>
-        <input type="text" id="otherInput" name="otherIssue">
-    </div>
         <div class="form-group">
             <label for="message">Additional Notes:</label>
-            <textarea id="message" name="message" required></textarea>
+            <textarea id="message" name="message" required>
         </div>
         <div class="form-group">
             <label for="message">Which Gen:</label>
