--- a/form.html
+++ b/form.html
@@ -55,6 +55,11 @@
             <label for="name">Paralign Name:</label>
             <input type="text" id="name" name="name" required>
         </div>
+
+        <div class="form-group">
+            <label for="message">Which Gen:</label>
+            <input id="message" name="message" required>
+        </div>
         
         <div class="form-group">
             <label for="name">Issues:</label>
@@ -66,10 +71,6 @@
             <input id="message" name="message" required>
         </div>
                 
-        <div class="form-group">
-            <label for="message">Additional Notes:</label>
-            <input id="message" name="message" required>
-        </div>
         <button type="submit">Submit</button>
     </form>
 </div>
