--- a/form.html
+++ b/form.html
@@ -48,7 +48,7 @@
 <body>
 
 <div class="form-container">
-    <h2>Contact Form</h2>
+    <h1>Paralign Issues Form</h1>
     <form action="https://formspree.io/f/mzbnvrdn" method="POST">
         
         <div class="form-group">
