--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
 <a href="https://joelabraham64.github.io/pipe-bomb/form" class="button-style">Form</a>
 <a href="https://joelabraham64.github.io/pipe-bomb/issues" class="button-style">Issues</a>
-<a href="https://joelabraham64.github.io/pipe-bomb/goodeats" class="button-style">Nomnoms</a>
+<a href="https://joelabraham64.github.io/pipe-bomb/goodeats" class="button-style">Nom - noms</a>
 
     <main>
         <h1>Paralign Issues and shtuff</h1>  
