--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
         .button-style {
             display: inline-block;
-            background-color: #4285F4;
+            background-color: #F7B207;
             color: white;
             padding: 10px 20px;
             text-decoration: none;
