--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         .button-style {
             display: inline-block;
             background-color: #F7B207;
-            color: white;
+            color: black;
             padding: 10px 20px;
             text-decoration: none;
             border-radius: 4px;
