--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
             border-radius: 4px;
             cursor: pointer;
             margin: 5px; /* Adds space between buttons */
+	    /* Make text bigger */
+	    font-size: 20px; /* Adjust size as needed */
+	
+	    /* Make text bolder */
+	    font-weight: bold; /* Can also use numeric values like 700 */
         }
     </style>
 
