--- a/index.html
+++ b/index.html
@@ -45,14 +45,17 @@ Hallo PRUFTECHNIK Service team North America Division. This website serves 4 dis
 
 <b>Inside the paralign</b>
 The paralign contains 3 ring laser gyroscopes that will be able to measure the roll, pitch, and yaw(x, y, and z axies) of the device.
+	
 To calibrate the device, it will first measure the Earth's rotation to see its speed(it should stay between 15.031 and 15.051 degree/hour)
 Once this is determined the paralign is then taken to a roll on the desired machine. 
 This will measure the axis of rotation of the device.
 Then the calibration plate set ur may begin. 
 The plate will be set up perfectly paralell to the link roll just measured with a desired  < .1 horizontal and vertical.
-Then you will 
+Then you will ...
+	I will finish this later.
 
 </pre>
 	<script src="index.js"></script>
+
   </body>
 </html>
