--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@ Then you will ...
 
 </pre>
 	<script src="index.js"></script>
+<a href="/data/01_How_to_use_and_set_up_the_PARALIGN.pdf">How to use/set up the paralign</a>
+<a href="data/Full_PARALIGN_Editor_Manual.pdf">Paralign Editor Software Manual</a>
+<a href="data/paralign_editor_download">Editor Software</a>
 
   </body>
 </html>
