--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ Then you will ...
 	<script src="index.js"></script>
 <a href="data/01_How_to_use_and_set_up_the_PARALIGN.pdf">How to use/set up the paralign</a>
 <a href="data/Full_PARALIGN_Editor_Manual.pdf">Paralign Editor Software Manual</a>
-<a href="data/PARALIGN EDITOR-Setup-1.9.16.exe">Editor Software</a>
+<a href="data/PARALIGN EDITOR-Setup-1.9.16.exe">Editor Software(1.9.16)</a>
 
   </body>
 </html>
