--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <a href="https://joelabraham64.github.io/pipe-bomb/form" class="button-style">Form</a>
 <a href="https://joelabraham64.github.io/pipe-bomb/issues" class="button-style">Issues</a>
 <a href="https://joelabraham64.github.io/pipe-bomb/goodeats" class="button-style">Nom - noms</a>
+<a href="https://joelabraham64.github.io/pipe-bomb/trickstips" class="button-style">Tips & Tricks</a>
 
     <main>
         <h1>Paralign Issues and shtuff</h1>  
