--- a/trickstips.html
+++ b/trickstips.html
@@ -9,5 +9,6 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
+    <par>This is mt for now</par>
   </body>
 </html>
