--- a/trickstips.html
+++ b/trickstips.html
@@ -9,6 +9,6 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <par>This is mt for now</par>
+    <pre>This is mt for now</pre>
   </body>
 </html>
