--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </style>
 
   </head>
-<body style="background-color:cream;">
+<body style="background-color:#F9E4BC;">
 <a href="https://joelabraham64.github.io/pipe-bomb/form" class="button-style">Form</a>
 <a href="https://joelabraham64.github.io/pipe-bomb/issues" class="button-style">Issues</a>
 <a href="https://joelabraham64.github.io/pipe-bomb/goodeats" class="button-style">Nom - noms</a>
