--- a/goodeats.html
+++ b/goodeats.html
@@ -24,7 +24,7 @@
     <script>
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
-            center: {lat: -34.397, lng: 150.644},
+            center: {lat: 40.12150192260742, lng: -100.45039367675781},
             zoom: 8
         });
 
