--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             margin: 5px; /* Adds space between buttons */
 	    /* Make text bigger */
 	    font-size: 20px; /* Adjust size as needed */
-	    font: Porter FT Semi Bold;
+	    font-family: 'Porter FT Semi Bold', sans-serif; /* Fallback font added */
+
 	    /* Make text bolder */
 	    font-weight: 1000; /* Can also use numeric values like 700 */
         }
