--- a/goodeats.html
+++ b/goodeats.html
@@ -20,6 +20,10 @@
 <body>
     <input id="place-search" type="text" placeholder="Search for places...">
     <div id="map"></div>
+    <input id="place-search" type="text" placeholder="Search for places...">
+    <button id="bookmark-btn">Bookmark Place</button>
+    <div id="bookmarks"></div>
+    <div id="map"></div>
 
     <script>
     function initMap() {
