--- a/goodeats.html
+++ b/goodeats.html
@@ -18,8 +18,8 @@
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN8UP_CBu3gF5Ft0VtgzZPNOmH3WRyLy8&callback=initMap&libraries=places"></script>
 </head>
 <body>
-    <input id="place-search" type="text" placeholder="Search for places...">
-    <div id="map"></div>
+<!--     <input id="place-search" type="text" placeholder="Search for places...">
+    <div id="map"></div> -->
     <input id="place-search" type="text" placeholder="Search for places...">
     <button id="bookmark-btn">Bookmark Place</button>
     <div id="bookmarks"></div>
