--- a/goodeats.html
+++ b/goodeats.html
@@ -26,11 +26,36 @@
     <div id="map"></div>
 
     <script>
+function saveBookmark(place) {
+    var bookmarks = JSON.parse(localStorage.getItem('bookmarks')) || [];
+    // Save only the necessary data to recreate the marker
+    bookmarks.push({
+        name: place.name,
+        lat: place.geometry.location.lat(),
+        lng: place.geometry.location.lng()
+    });
+    localStorage.setItem('bookmarks', JSON.stringify(bookmarks));
+}
+
+function loadBookmarks() {
+    var bookmarks = JSON.parse(localStorage.getItem('bookmarks')) || [];
+    bookmarks.forEach(function(bookmark) {
+        var marker = new google.maps.Marker({
+            map: map,
+            position: {lat: bookmark.lat, lng: bookmark.lng},
+            title: bookmark.name
+        });
+    });
+}
+
+
+        
 function initMap() {
-    var map = new google.maps.Map(document.getElementById('map'), {
-        // Center the map on the United States
-        center: {lat: 39.8283, lng: -98.5795},
-        zoom: 5 // Adjust zoom level as needed
+var map = new google.maps.Map(document.getElementById('map'), {
+    center: {lat: 39.8283, lng: -98.5795},
+    zoom: 4
+});
+
     });
 
     var input = document.getElementById('place-search');
