--- a/goodeats.html
+++ b/goodeats.html
@@ -6,7 +6,8 @@
         /* Style the map container */
         #map {
             height: 400px;
-            width: 80%;
+            width: 80%; /* Adjusted to 80% of the viewport width */
+            margin: auto; /* Centers the map horizontally */
         }
         /* Optional: Makes the sample page fill the window. */
         html, body {
@@ -15,20 +16,19 @@
             padding: 0;
         }
     </style>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN8UP_CBu3gF5Ft0VtgzZPNOmH3WRyLy8&callback=initMap&libraries=places"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=places"></script>
 </head>
 <body>
-<!--     <input id="place-search" type="text" placeholder="Search for places...">
-    <div id="map"></div> -->
     <input id="place-search" type="text" placeholder="Search for places...">
     <button id="bookmark-btn">Bookmark Place</button>
     <div id="bookmarks"></div>
     <div id="map"></div>
 
     <script>
+let map; // Declare map variable globally to access it across functions
+
 function saveBookmark(place) {
     var bookmarks = JSON.parse(localStorage.getItem('bookmarks')) || [];
-    // Save only the necessary data to recreate the marker
     bookmarks.push({
         name: place.name,
         lat: place.geometry.location.lat(),
@@ -40,7 +40,7 @@ function saveBookmark(place) {
 function loadBookmarks() {
     var bookmarks = JSON.parse(localStorage.getItem('bookmarks')) || [];
     bookmarks.forEach(function(bookmark) {
-        var marker = new google.maps.Marker({
+        new google.maps.Marker({
             map: map,
             position: {lat: bookmark.lat, lng: bookmark.lng},
             title: bookmark.name
@@ -48,18 +48,15 @@ function loadBookmarks() {
     });
 }
 
-
-        
 function initMap() {
-var map = new google.maps.Map(document.getElementById('map'), {
-    center: {lat: 39.8283, lng: -98.5795},
-    zoom: 4
-});
-
+    map = new google.maps.Map(document.getElementById('map'), {
+        center: {lat: 39.8283, lng: -98.5795},
+        zoom: 4
     });
 
     var input = document.getElementById('place-search');
     var searchBox = new google.maps.places.SearchBox(input);
+    map.controls[google.maps.ControlPosition.TOP_LEFT].push(input);
 
     map.addListener('bounds_changed', function() {
         searchBox.setBounds(map.getBounds());
@@ -69,13 +66,9 @@ var map = new google.maps.Map(document.getElementById('map'), {
     searchBox.addListener('places_changed', function() {
         var places = searchBox.getPlaces();
 
-        if (places.length == 0) {
-            return;
-        }
+        if (places.length == 0) return;
 
-        markers.forEach(function(marker) {
-            marker.setMap(null);
-        });
+        markers.forEach(function(marker) { marker.setMap(null); });
         markers = [];
 
         var bounds = new google.maps.LatLngBounds();
@@ -85,17 +78,8 @@ var map = new google.maps.Map(document.getElementById('map'), {
                 return;
             }
 
-            var icon = {
-                url: place.icon,
-                size: new google.maps.Size(71, 71),
-                origin: new google.maps.Point(0, 0),
-                anchor: new google.maps.Point(17, 34),
-                scaledSize: new google.maps.Size(25, 25)
-            };
-
             markers.push(new google.maps.Marker({
                 map: map,
-                icon: icon,
                 title: place.name,
                 position: place.geometry.location
             }));
@@ -109,21 +93,16 @@ var map = new google.maps.Map(document.getElementById('map'), {
         map.fitBounds(bounds);
     });
 
-    // Load bookmarks on initial load
-    loadBookmarks();
+    loadBookmarks(); // Load bookmarks when the map is initialized
 
-    // Bookmarking functionality
     document.getElementById('bookmark-btn').addEventListener('click', function() {
         var places = searchBox.getPlaces();
         if (places.length > 0) {
-            var place = places[0]; // Assuming you want to bookmark the first result
-            saveBookmark(place);
+            saveBookmark(places[0]); // Save the first place found
             loadBookmarks(); // Refresh the bookmarks display
         }
     });
 }
-
-</script>
-
+    </script>
 </body>
 </html>
