--- a/goodeats.html
+++ b/goodeats.html
@@ -16,7 +16,7 @@
             padding: 0;
         }
     </style>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&libraries=places"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBN8UP_CBu3gF5Ft0VtgzZPNOmH3WRyLy8&callback=initMap&libraries=places"></script>
 </head>
 <body>
     <input id="place-search" type="text" placeholder="Search for places...">
