--- a/trickstips.html
+++ b/trickstips.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="./favicon.ico" type="image/x-icon">
   </head>
   <body>
-    <pre>This is mt for now</pre>
-    <pre>HI SNEHAL!!!!</pre>
+    <pre>This is mt for now
+    HI SNEHAL!!!!</pre>
   </body>
 </html>
